<resources>
    <string name="app_name">PrescribeIt</string>

    <string name="doctor">Doctor</string>
    <string name="medical_file">Medical Files</string>
    <string name="settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Add Doctor Activity
    <string name="full_name">Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="details">Details</string>
    <string name="appointment_hint">Appointment Date</string>
    <string name="number_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="update_button">Update</string>

    <string name="save_button">Save</string>
    <string name="enter_doctor_name">Enter Doctor Name</string>
    <string name="search">Search</string>
    <string name="take_photo">Take Photo</string>
    <string name="doctors_name">Doctor\'s Name</string>
    <string name="date">Date</string>


</resources>
