<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchDoctorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/enter_doctor_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/save_button_bg"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/search"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/demoFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/layout_bg_white"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/textview_bg_two"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/textview_bg_two"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/detailsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textview_bg_two"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:hint="@string/details"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/appointmentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textview_bg_two"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:hint="@string/appointment_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textview_bg_two"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/textview_bg_two"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/save_button_bg"
            android:text="@string/update_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noResultFoundTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone" />

</RelativeLayout>