<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20sp"
    android:paddingBottom="20sp"
    android:background="@drawable/layout_bg_white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/historyImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_doctor_logo"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/historyNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/historyImageView"
        android:text="@string/doctors_name"
        android:textSize="25sp"
        android:fontFamily="@font/ubuntu_regular"
        android:paddingStart="25dp"
        android:layout_marginTop="10dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/historyDetailsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/historyNameView"
        android:layout_toEndOf="@id/historyImageView"
        android:text="@string/details"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/lightBlue"
        android:layout_marginTop="10dp"
        android:paddingStart="30dp"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/historyDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/historyNameView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:paddingStart="30dp"
        android:text="@string/date"
        android:textColor="@android:color/holo_green_dark"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>
