<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:screenOrientation="portrait"
    tools:context=".activity.AddDoctorActivity">

    <LinearLayout
        android:id="@+id/fieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/layout_bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputFirstNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/add_update_fields_individual"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/inputLastNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:background="@drawable/add_update_fields_individual"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_update_fields_individual"
            android:drawableStart="@drawable/ic_details"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/details"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_update_fields_individual"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/appointment_hint"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_update_fields_individual"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/number_hint"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/add_update_fields_individual"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email_hint"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/logo_bg"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_doctor_logo" />

    <Button
        android:id="@+id/saveDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fieldsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/save_button_bg"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>